--- a/resources/index.html
+++ b/resources/index.html
@@ -21,6 +21,18 @@
 <body>
 
     <header>
+
+        <nav>
+            <img class="logo" src="img/bowl-food-solid.svg">
+
+            <ul class="main-nav">
+                <li><a href="#">Tele-Entrega</a></li>
+                <li><a href="#">Funcionamento</a></li>
+                <li><a href="#">Cidades Atendidas</a></li>
+                <li><a href="#">Inscreverse</a></li>
+            </ul>
+        </nav>
+
         <div class="hero-text-box">
             <h1>Adeus fast food do mal. <br>
                  Olá comida saúdavel do bem.</h1>
